# ari-dex

./: .gitignore  Cargo.toml  Dockerfile.api  README.md  developers.html  fly.api.toml  fly.toml  index.html  og.html  whitepaper.md
.github/workflows/: ci.yml
contracts/: Makefile  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: AriPaymaster.sol  AriToken.sol  ConditionalIntent.sol  CrossChainIntent.sol  IntentComposer.sol  PerpetualMarket.sol  PrivatePool.sol  Settlement.sol  SimplePriceOracle.sol  SolverRegistry.sol  Vault.sol  VaultFactory.sol  VeARI.sol
contracts/src/interfaces/: IERC20.sol  IPermit2.sol  IPriceOracle.sol
contracts/test/: AriPaymaster.t.sol  AriToken.t.sol  ConditionalIntent.t.sol  CrossChainIntent.t.sol  IntentComposer.t.sol  PerpetualMarket.t.sol  PrivatePool.t.sol  Settlement.t.sol  SolverRegistry.t.sol  Vault.t.sol  VaultFactory.t.sol  VeARI.t.sol
contracts/test/mocks/: MockERC20.sol
crates/ari-core/: Cargo.toml
crates/ari-core/src/: batch.rs  chain.rs  error.rs  intent.rs  lib.rs  order.rs  pool.rs  solution.rs  token.rs
crates/ari-crypto/: Cargo.toml
crates/ari-crypto/src/: bls.rs  encrypt.rs  lib.rs  threshold.rs
crates/ari-engine/: Cargo.toml
crates/ari-engine/src/: hybrid.rs  lib.rs  state.rs
crates/ari-engine/src/batch/: auction.rs  mod.rs  pricing.rs  scheduler.rs
crates/ari-engine/src/clmm/: math.rs  (+4 more)
crates/ari-gateway/: Cargo.toml
crates/ari-gateway/src/: app.rs  db.rs  lib.rs  validation.rs
crates/ari-node/: Cargo.toml
crates/ari-node/src/: main.rs
crates/ari-solver/: Cargo.toml
crates/ari-solver/src/: auction.rs  lib.rs  router.rs  scoring.rs  solver.rs
en/: developers.html  index.html
frontend/: bun.lockb  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: Header.tsx  PoolsPage.tsx  PortfolioPage.tsx  SolversPage.tsx  SwapPanel.tsx
frontend/src/hooks/: useQuote.ts  useSignIntent.ts  useSubmitIntent.ts
frontend/src/types/: index.ts
ja/: developers.html  index.html
(+21 files in other folders)
