[package]
name = "ari-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic primitives for the ARI DEX (threshold encryption, BLS)"

[dependencies]
ari-core = { path = "../ari-core" }
serde.workspace = true
serde_json.workspace = true
aes-gcm.workspace = true
rand.workspace = true
sha2.workspace = true
