[package]
name = "ari-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ARI DEX node binary"

[dependencies]
ari-core = { path = "../ari-core" }
ari-engine = { path = "../ari-engine" }
ari-gateway = { path = "../ari-gateway" }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
